force-app/main/default/objects/SharePoint_Schema__c/SharePoint_Schema__c.object-meta.xml
<CustomObject>
    <label>SharePoint Schema</label>
    <nameField>
        <label>SharePoint Schema Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SharePoint Schemas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>