force-app/main/default/objects/SharePoint_Schema__c/fields/Child_Object_Names__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Names__c</fullName>
    <label>Child Object Names</label>
    <type>TextArea</type>
</CustomField>