force-app/main/default/objects/SharePoint_Schema__c/fields/Is_It_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_It_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is It Parent</label>
    <type>Checkbox</type>
</CustomField>