force-app/main/default/objects/SharePoint_Schema__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>SharePoint_Schema__c</referenceTo>
    <relationshipLabel>SharePoint Schemas</relationshipLabel>
    <relationshipName>SharePoint_Schemas</relationshipName>
    <type>Lookup</type>
</CustomField>