force-app/main/default/objects/SharePoint_Schema__c/fields/Parent_Object_Name_Field_Api__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Name_Field_Api__c</fullName>
    <inlineHelpText>Query Parent Object Name Field Api</inlineHelpText>
    <label>Parent Object Name Field Api</label>
    <type>TextArea</type>
</CustomField>