force-app/main/default/objects/SharePoint_Schema__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <label>Query</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>