force-app/main/default/objects/SharePoint_Schema__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Query__c</columns>
    <columns>Sequence__c</columns>
    <columns>Is_It_Parent__c</columns>
    <columns>Field_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>